# docs/openapi.yml
@@ -683,6 +683,32 @@ components:
             create_debug_recording: false
           description: 'The debug settings for the bot, e.g. {''create_debug_recording'':
             True}.'
+        automatic_leave_settings:
+          type: object
+          properties:
+            silence_threshold_seconds:
+              type: integer
+              description: Number of seconds of continuous silence after which the bot should leave
+              default: 600
+            only_participant_in_meeting_threshold_seconds:
+              type: integer
+              description: Number of seconds to wait before leaving if bot is the only participant
+              default: 60
+            wait_for_host_to_start_meeting_timeout_seconds:
+              type: integer
+              description: Number of seconds to wait for the host to start the meeting
+              default: 600
+            silence_activate_after_seconds:
+              type: integer
+              description: Number of seconds to wait before activating the silence threshold
+              default: 1200
+          required: []
+          default:
+            silence_threshold_seconds: 600
+            only_participant_in_meeting_threshold_seconds: 60
+            wait_for_host_to_start_meeting_timeout_seconds: 600
+            silence_activate_after_seconds: 1200
+          description: 'Settings that control when the bot will automatically leave the meeting'
       required:
       - bot_name
       - meeting_url
